--- a/app.html
+++ b/app.html
@@ -1,1 +1,39 @@
-
+<!DOCTYPE HTML>
+<html lang="zh-CN">
+<head>
+    <meta charset="UTF-8">
+    <title>园师课堂</title>
+    <script type="text/javascript">
+        // 获取终端的相关信息
+        var Terminal = {
+            // 辨别移动终端类型
+            platform : function(){
+                var u = navigator.userAgent, app = navigator.appVersion;
+                return {
+                    // android终端或者uc浏览器
+                    android: u.indexOf('Android') > -1 || u.indexOf('Linux') > -1,
+                    // 是否为iPhone或者QQHD浏览器
+                    iPhone: u.indexOf('iPhone') > -1 ,
+                    // 是否iPad
+                    iPad: u.indexOf('iPad') > -1
+                };
+            }(),
+            // 辨别移动终端的语言：zh-cn、en-us、ko-kr、ja-jp...
+            language : (navigator.browserLanguage || navigator.language).toLowerCase()
+        }
+        // 根据不同的终端，跳转到不同的地址
+        if(Terminal.platform.iPad){//iPad端
+            document.write('抱歉，“来考教师”暂时没有iPad版APP!');
+        } else if(Terminal.platform.iPhone){
+            var iosUrl = 'https://itunes.apple.com/us/app/来考教师/id1182649054?l=zh&ls=1&mt=8';
+            location.href = iosUrl;
+        }else{
+            var theUrl = 'http://a.app.qq.com/o/simple.jsp?pkgname=com.elaikao.lkjs';
+            location.href = theUrl;
+        }
+    </script>
+</head>
+<body>
+<!---->
+</body>
+</html>
