--- a/app.html
+++ b/app.html
@@ -25,11 +25,9 @@
         if(Terminal.platform.iPad){//iPad端
             document.write('抱歉，“来考教师”暂时没有iPad版APP!');
         } else if(Terminal.platform.iPhone){
-            var iosUrl = 'https://itunes.apple.com/us/app/来考教师/id1182649054?l=zh&ls=1&mt=8';
-            location.href = iosUrl;
+            location.href = 'https://itunes.apple.com/us/app/来考教师/id1182649054?l=zh&ls=1&mt=8';
         }else{
-            var theUrl = 'http://a.app.qq.com/o/simple.jsp?pkgname=com.elaikao.lkjs';
-            location.href = theUrl;
+            location.href = 'http://a.app.qq.com/o/simple.jsp?pkgname=com.elaikao.lkjs';
         }
     </script>
 </head>
