--- a/app.html
+++ b/app.html
@@ -25,9 +25,11 @@
         if(Terminal.platform.iPad){//iPad端
             document.write('抱歉，“园师课堂”暂时没有iPad版APP!');
         } else if(Terminal.platform.iPhone){
+            image.src('http://img.elaikao.com/logoa.png');
             document.write('抱歉，“园师课堂”暂时没有ios版APP!');
 //             location.href = 'https://itunes.apple.com/us/app/来考教师/id1182649054?l=zh&ls=1&mt=8';
         }else{
+            image.src('http://img.elaikao.com/logoa.png');
             document.write('抱歉，“园师课堂”暂时没有APP!');
 //             location.href = 'http://a.app.qq.com/o/simple.jsp?pkgname=com.elaikao.lkjs';
         }
