--- a/app.html
+++ b/app.html
@@ -23,13 +23,12 @@
         }
         // 根据不同的终端，跳转到不同的地址
         if(Terminal.platform.iPad){//iPad端
-            document.write('抱歉，“园师课堂”暂时没有iPad版APP!');
-        } else if(Terminal.platform.iPhone){
-            document.write('抱歉，“园师课堂”暂时没有ios版APP!');
+            document.write(new String("抱歉，园师课堂暂时没有iPad版APP!").big());
+        } else if(Terminal.platform.iPhone){//ios端
+            document.write(new String("抱歉，园师课堂暂时没有ios版APP!").big());
 //             location.href = 'https://itunes.apple.com/us/app/来考教师/id1182649054?l=zh&ls=1&mt=8';
         }else{
-//             document.write('抱歉，“园师课堂”暂时没有APP!');
-            document.write(new String('抱歉，“园师课堂”暂时没有APP!').big());
+            document.write(new String("抱歉，园师课堂暂时没有APP!").big());
 //             location.href = 'http://a.app.qq.com/o/simple.jsp?pkgname=com.elaikao.lkjs';
         }
     </script>
