--- a/app.html
+++ b/app.html
@@ -2,7 +2,7 @@
 <html lang="zh-CN">
 <head>
     <meta charset="UTF-8">
-    <title>园师课堂</title>
+    <title>育德教师</title>
     <script type="text/javascript">
         // 获取终端的相关信息
         var Terminal = {
@@ -23,12 +23,12 @@
         }
         // 根据不同的终端，跳转到不同的地址
         if(Terminal.platform.iPad){//iPad端
-            document.write(new String("抱歉，园师课堂暂时没有iPad版APP!").fontsize(6));
+            document.write(new String("抱歉，育德教师暂时没有iPad版APP!").fontsize(6));
         } else if(Terminal.platform.iPhone){//ios端
-            document.write(new String("抱歉，园师课堂暂时没有ios版APP!").fontsize(6));
+            document.write(new String("抱歉，育德教师暂时没有ios版APP!").fontsize(6));
 //             location.href = 'https://itunes.apple.com/us/app/来考教师/id1182649054?l=zh&ls=1&mt=8';
         }else{
-            document.write(new String("抱歉，园师课堂暂时没有APP!").fontsize(6));
+            document.write(new String("抱歉，育德教师暂时没有APP!").fontsize(6));
 //             location.href = 'http://a.app.qq.com/o/simple.jsp?pkgname=com.elaikao.lkjs';
         }
     </script>
