--- a/app.html
+++ b/app.html
@@ -28,8 +28,7 @@
             document.write(new String("抱歉，育德教师暂时没有ios版APP!").fontsize(6));
 //             location.href = 'https://itunes.apple.com/us/app/来考教师/id1182649054?l=zh&ls=1&mt=8';
         }else{
-            document.write(new String("抱歉，育德教师暂时没有APP!").fontsize(6));
-//             location.href = 'http://a.app.qq.com/o/simple.jsp?pkgname=com.elaikao.lkjs';
+            location.href = 'http://a.app.qq.com/o/simple.jsp?pkgname=com.ysedu.ydjs';
         }
     </script>
 </head>
